--- a/move_arms/CMakeLists.txt
+++ b/move_arms/CMakeLists.txt
@@ -7,6 +7,8 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -21,5 +23,13 @@ if(BUILD_TESTING)
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+# Install Python executables
+install(PROGRAMS
+  scripts/send_velocity_node.py
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 ament_package()
+
+
+
