--- a/move_arms/package.xml
+++ b/move_arms/package.xml
@@ -1,12 +1,16 @@
-<?xml version="1.0"?>
+<<?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>move_arms</name>
+  <name>locobot_move</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="li.ricardo@foxmail.com">ljx</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
+  <depend>rclpy</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
