modified:   move_arms/package.xml 	modified:   move_arms/scripts/send_endeffector_node.py

--- a/move_arms/package.xml
+++ b/move_arms/package.xml
@@ -10,7 +10,7 @@
   
 
   <depend>rosbag</depend>
-  <depend>rospy</depend>
+  <depend>rclpy</depend>
   <depend>nav_msgs</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
